--- a/src/html/index.html
+++ b/src/html/index.html
@@ -15,9 +15,38 @@
                 <div class="row">
                     <div class="col-md-6">
                         <!-- USERS TASKS LIST -->
+                        <div class="card">
+                            <div class="card-header">
+                                <h4 class="card-title"><i class="ft-alert-circle"></i> Важливе завдання</h4>
+                                <a class="heading-elements-toggle"><i class="fa fa-ellipsis-v font-medium-3"></i></a>
+                            </div>
+                            <div class="card-body collapse in">
+                                <div class="card-block vip-task">
+                                    <div class="list-group-item">
+                                        <table class="table mb-0 borderless">
+                                            <tbody>
+                                            <tr>
+                                                <td><i class="fa fa-thumb-tack icon-bg-circle bg-teal"></i> <h6 class="media-heading teal">Знайди гарну хату</h6></td>
+                                                <td class="text-xs-center font-small-2">5 балів</td>
+                                            </tr>
+                                            <tr>
+                                                <td><p class="notification-text font-small-3 text-muted">Розшифруй декларацію, та ми додамо її у базу</p>
+                                                </td>
+                                                <td class="text-xs-center font-small-2">10 гривень</td>
+                                            </tr>
+                                            <tr>
+                                                <td><span class="text-xs-center font-small-2">Виконано 5 завданнь <progress class="progress progress-sm progress-teal mt-0 mb-0" value="5" max="100"></progress></span></td>
+                                                <td class="text-xs-center font-small-2"><a href="#" title="Канцелярська сотня"><!--(bake _svg-logo.html logo="garnahata")--></a></td>
+                                            </tr>
+                                            </tbody>
+                                        </table>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                         <div class="card" id="all-tasks-list">
                             <div class="card-header" id="user-tasks-table-controls">
-                                <h4 class="card-title"><a data-action="reload" class="show-all table-controls">Всі завдання</a></h4>
+                                <h4 class="card-title"><span class="show-all table-controls">Всі завдання</span></h4>
                                 <a class="heading-elements-toggle"><i class="fa fa-ellipsis-v font-medium-3"></i></a>
                                 <div class="heading-elements">
                                     <ul class="list-inline mb-0">
