--- a/src/html/parts/navbar-top.html
+++ b/src/html/parts/navbar-top.html
@@ -17,13 +17,11 @@
                 </ul>
                 <ul class="nav navbar-nav float-xs-right">
                     <li class="nav-item col">
-                        <i class="ft-bar-chart-2"></i> <span>Пожертви: 750 грн.</span>
+                        <i class="ft-bar-chart-2"></i> <span>Пожертви: 750 грн.</span> <br>
+                        <span class="">я на 34 рівні <progress class="progress progress-sm progress-success mb-0" value="35" max="50"></progress></span>
                     </li>
                     <li class="nav-item col">
-                        <a href="#" class="text-xs-center font-small-2">я на 34 рівні <progress class="progress progress-sm progress-success mb-0" value="35" max="50"></progress></a>
-                    </li>
-                    <li class="nav-item col">
-                        <i class="icon-wallet"></i> <span>1000 потенційних грн. / 500 активних</span>
+                        <i class="icon-wallet"></i> <span>1000 потенційних грн. <br>500 активних</span>
                     </li>
                     <li class="dropdown dropdown-notification nav-item"><a href="#" data-toggle="dropdown" class="nav-link nav-link-label"><i class="ficon ft-bell"></i><span class="tag tag-pill tag-default tag-danger tag-default tag-up">5</span></a>
                         <ul class="dropdown-menu dropdown-menu-media dropdown-menu-right">
