--- a/src/html/fund-page.html
+++ b/src/html/fund-page.html
@@ -16,7 +16,7 @@
                 <div class="row" id="user-profile">
                     <div class="col-xs-12">
                         <div class="card profile-with-cover">
-                            <div class="card-img-top img-fluid bg-cover height-300" style="background: url('../../../app-assets/images/carousel/tabletochki.jpg') 50%;"></div>
+                            <div class="card-img-top img-fluid bg-cover height-200" style="background: url('../../../app-assets/images/carousel/tabletochki.jpg') 50%;"></div>
                             <div class="cover-shadow"></div>
                             <div class="media profil-cover-details">
                                 <div class="media-left pl-2 pt-2">
@@ -33,12 +33,13 @@
                             <nav class="navbar navbar-light navbar-profile">
                                 <button class="navbar-toggler hidden-sm-up" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar2" aria-controls="exCollapsingNavbar2" aria-expanded="false" aria-label="Toggle navigation"></button>
                                 <div class="collapse navbar-toggleable-xs" id="exCollapsingNavbar2">
-                                    <ul class="nav navbar-nav float-xs-right">
+                                    <ul class="nav navbar-nav">
                                         <li class="nav-item">
-                                            <a class="nav-link" href="#about-fund"><i class="fa fa-briefcase"></i> Про фонд</a>
+                                            <button data-toggle="modal" data-target="#primary" type="button" class="btn btn-danger btn-sm"><i class="icon-magic-wand"></i> Зробити внесок</button>
                                         </li>
-                                        <li class="nav-item">
-                                            <a class="nav-link" href="#fund-subprojects"><i class="fa fa-heart-o"></i> Потребують допомоги</a>
+                                        <li class="float-xs-right fund-nav-stats">
+                                            <p class="font-small-2 mb-0">Я перерахував <span class="tag tag tag-pill tag-success">350 грн.</span></p>
+                                            <p class="font-small-2 mb-0">Всього зібрано <span class="tag tag-info tag-pill float-xs-right">500 000 грн.</span></p>
                                         </li>
                                     </ul>
                                 </div>
@@ -79,24 +80,16 @@
                                     <div class="row">
                                         <h4 class="card-title col-sm-12">Робота фонду</h4>
                                         <figure class="col-lg-3 col-md-6 col-xs-12" itemprop="associatedMedia" itemscope="" itemtype="http://schema.org/ImageObject">
-                                            <a href="../../../app-assets/images/gallery/1.jpg" itemprop="contentUrl" data-size="480x360">
-                                                <img class="img-thumbnail img-fluid" src="http://lorempixel.com/480/360/nature/1" itemprop="thumbnail" alt="Image description">
-                                            </a>
+                                            <img class="img-thumbnail img-fluid" src="http://lorempixel.com/480/360/nature/1" itemprop="thumbnail" alt="Image description">
                                         </figure>
                                         <figure class="col-lg-3 col-md-6 col-xs-12" itemprop="associatedMedia" itemscope="" itemtype="http://schema.org/ImageObject">
-                                            <a href="../../../app-assets/images/gallery/1.jpg" itemprop="contentUrl" data-size="480x360">
-                                                <img class="img-thumbnail img-fluid" src="http://lorempixel.com/480/360/nature/2" itemprop="thumbnail" alt="Image description">
-                                            </a>
+                                            <img class="img-thumbnail img-fluid" src="http://lorempixel.com/480/360/nature/2" itemprop="thumbnail" alt="Image description">
                                         </figure>
                                         <figure class="col-lg-3 col-md-6 col-xs-12" itemprop="associatedMedia" itemscope="" itemtype="http://schema.org/ImageObject">
-                                            <a href="../../../app-assets/images/gallery/1.jpg" itemprop="contentUrl" data-size="480x360">
-                                                <img class="img-thumbnail img-fluid" src="http://lorempixel.com/480/360/nature/3" itemprop="thumbnail" alt="Image description">
-                                            </a>
+                                            <img class="img-thumbnail img-fluid" src="http://lorempixel.com/480/360/nature/3" itemprop="thumbnail" alt="Image description">
                                         </figure>
                                         <figure class="col-lg-3 col-md-6 col-xs-12" itemprop="associatedMedia" itemscope="" itemtype="http://schema.org/ImageObject">
-                                            <a href="../../../app-assets/images/gallery/4.jpg" itemprop="contentUrl" data-size="480x360">
-                                                <img class="img-thumbnail img-fluid" src="http://lorempixel.com/480/360/nature/1" itemprop="thumbnail" alt="Image description">
-                                            </a>
+                                            <img class="img-thumbnail img-fluid" src="http://lorempixel.com/480/360/nature/1" itemprop="thumbnail" alt="Image description">
                                         </figure>
                                     </div>
                                 </div>
@@ -105,16 +98,15 @@
                     </div>
                 </div>
 
-                <div class="row" id="image-grid">
+                <div class="row" id="fund-projects">
                     <div class="col-xs-12">
                         <section class="card">
-                            <div class="card-header">
-                                <h4 id="fund-subprojects" class="card-title">Потребують допомоги:</h4>
-                            </div>
                             <div class="card-body collapse in">
+
                                 <div class="card-block my-gallery" itemscope="" itemtype="http://schema.org/ImageGallery">
                                     <div class="row">
                                         <div class="grid-hover">
+                                            <!-- todo: carousel -->
                                             <div class="col-sm-4 col-xs-12">
                                                 <figure class="effect-sarah">
                                                     <img src="http://lorempixel.com/400/300/people/1" alt="img02">
@@ -156,50 +148,8 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="row">
-                                        <div class="grid-hover">
-                                            <div class="col-sm-4 col-xs-12">
-                                                <figure class="effect-sarah">
-                                                    <img src="http://lorempixel.com/400/300/people/3" alt="img02">
-                                                    <figcaption>
-                                                        <h2>Holy
-                                                            <span>Sadie</span>
-                                                        </h2>
-                                                        <p>Sadie never took her eyes off me.
-                                                            <br>She had a dark soul.</p>
-                                                        <a href="#">View more</a>
-                                                    </figcaption>
-                                                </figure>
-                                            </div>
-                                            <div class="col-sm-4 col-xs-12">
-                                                <figure class="effect-sarah">
-                                                    <img src="http://lorempixel.com/400/300/people/4" alt="img02">
-                                                    <figcaption>
-                                                        <h2>Holy
-                                                            <span>Sadie</span>
-                                                        </h2>
-                                                        <p>Sadie never took her eyes off me.
-                                                            <br>She had a dark soul.</p>
-                                                        <a href="#">View more</a>
-                                                    </figcaption>
-                                                </figure>
-                                            </div>
-                                            <div class="col-sm-4 col-xs-12">
-                                                <figure class="effect-sarah">
-                                                    <img src="http://lorempixel.com/400/300/people/6" alt="img02">
-                                                    <figcaption>
-                                                        <h2>Holy
-                                                            <span>Sadie</span>
-                                                        </h2>
-                                                        <p>Sadie never took her eyes off me.
-                                                            <br>She had a dark soul.</p>
-                                                        <a href="#">View more</a>
-                                                    </figcaption>
-                                                </figure>
-                                            </div>
-                                        </div>
-                                    </div>
                                 </div>
+
                             </div>
                         </section>
                     </div>
