--- a/src/html/parts/left-sidebar-menu-fund-page.html
+++ b/src/html/parts/left-sidebar-menu-fund-page.html
@@ -1,31 +1,18 @@
-<div data-scroll-to-active="true" class="main-menu menu-fixed menu-dark menu-accordion menu-shadow">
-    <a href="javascript:void(0)" class="list-group-item disabled-link transparent blue-grey lighten-4">
-        <span data-i18n="" class="menu-title">Я перерахував до цього фонду: </span>
+<div data-scroll-to-active="true" class="main-menu menu-fixed menu-dark menu-accordion menu-shadow ">
+
+    <!--<a href="javascript:void(0)" class="list-group-item disabled-link transparent blue-grey lighten-4 hidden-collapsed">
+        <span data-i18n="" class="menu-title">Я перерахував до цього фонду </span>
         <span class="tag tag tag-pill tag-success">350 грн.</span>
     </a>
 
-    <div class="card card-transparent" id="top-fund-users">
-        <div class="card-header mb-0">
-            <h4 class="card-title">Топ меценатів</h4>
-            <a class="heading-elements-toggle"><i class="fa fa-ellipsis-v font-medium-3"></i></a>
-            <div class="heading-elements">
-                <ul class="list-inline mb-0">
-                    <li><a data-action="collapse"><i class="ft-minus"></i></a></li>
-                </ul>
-            </div>
+    <div class="card card-transparent hidden-collapsed" id="top-fund-users">
+        <div class="card-header mb-0 pb-0">
+            <h4 class="card-title pb-0">Топ меценатів:</h4>
         </div>
         <div class="card-body collapse in">
             <div class="card-body collapse in">
                 <div class="card-block  py-0 px-0">
                     <div class="list-group">
-                        <a href="javascript:void(0)" class="list-group-item">
-                            <div class="media">
-                                <div class="media-body">
-                                    <h6 class="media-heading mb-0">Всього зібрано користувачами:</h6>
-                                    <p class="font-small-2 mb-0">500 000 грн.</p>
-                                </div>
-                            </div>
-                        </a>
                         <a href="javascript:void(0)" class="list-group-item">
                             <div class="media">
                                 <div class="media-left"><span class="avatar avatar-sm rounded-circle"><img src="../../../app-assets/images/portrait/small/avatar-s-1.png" alt="avatar"><i></i></span></div>
@@ -56,38 +43,23 @@
                                 </div>
                             </div>
                         </a>
+                        <hr>
+                        <a href="javascript:void(0)" class="list-group-item">
+                            <div class="media">
+                                <div class="media-body">
+                                    <h6 class="media-heading mb-0">Всього зібрано користувачами:</h6>
+                                    <p class="font-small-2 mb-0">500 000 грн.</p>
+                                </div>
+                            </div>
+                        </a>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+    -->
 
     <div class="main-menu-content">
-        <ul id="main-menu-navigation" data-menu="menu-navigation" class="navigation navigation-main">
-            <li class="active nav-item"><a href="#"><i class="ft-home"></i><span data-i18n="" class="menu-title">Головна</span></a></li>
-            <li class=" nav-item"><a href="#"><i class="ft-user"></i><span data-i18n="" class="menu-title">Профіль</span></a>
-                <ul class="menu-content">
-                    <li><a href="#" class="menu-item"><i class="ft-cog"></i> Редагувати профіль</a></li>
-                    <li><a href="#" class="menu-item"><i class="ft-power"></i> Вихід</a></li>
-                </ul>
-            </li>
-            <li class=" nav-item"><a href="#"><i class="ft-check-square"></i><span data-i18n="" class="menu-title">Список завдань</span><span class="tag tag-danger tag-pill float-xs-right mr-2">New</span></a>
-                <ul class="menu-content">
-                    <li><a href="#" class="menu-item">Запросити друга +5</a></li>
-                    <li><a href="#" class="menu-item">Додати декларацію +15</a></li>
-                    <li><a href="#" class="menu-item" title="Розшифрувати декларацію +10">Розшифрувати декларацію +10</a></li>
-                    <li><a href="#" class="menu-item">Знайти гарну хату +5</a></li>
-                </ul>
-            </li>
-            <li class=" nav-item"><a href="#"><i class="ft-heart"></i><span data-i18n="" class="menu-title">Список фондів</span><span class="tag tag-warning tag-pill float-xs-right mr-2">+3</span></a>
-                <ul class="menu-content">
-                    <li><a href="#" class="menu-item">Таблеточки</a></li>
-                    <li><a href="#" class="menu-item">Повернись живим</a></li>
-                    <li><a href="#" class="menu-item">Крила</a></li>
-                    <li><a href="#" class="menu-item">Азов</a></li>
-                </ul>
-            </li>
-            <li class="nav-item"><a href="#"><i class="ft-info"></i><span data-i18n="" class="menu-title">Про проект</span></a></li>
-        </ul>
+        <!--(bake _menu-tree-vertical.html)-->
     </div>
 </div>
