--- a/src/html/parts/left-sidebar-menu.html
+++ b/src/html/parts/left-sidebar-menu.html
@@ -1,30 +1,5 @@
 <div data-scroll-to-active="true" class="main-menu menu-fixed menu-dark menu-accordion menu-shadow">
     <div class="main-menu-content">
-        <ul id="main-menu-navigation" data-menu="menu-navigation" class="navigation navigation-main">
-            <li class="active nav-item"><a href="#"><i class="ft-home"></i><span data-i18n="" class="menu-title">Головна</span></a></li>
-            <li class=" nav-item"><a href="#"><i class="ft-user"></i><span data-i18n="" class="menu-title">Профіль</span></a>
-                <ul class="menu-content">
-                    <li><a href="#" class="menu-item"><i class="ft-cog"></i> Редагувати профіль</a></li>
-                    <li><a href="#" class="menu-item"><i class="ft-power"></i> Вихід</a></li>
-                </ul>
-            </li>
-            <li class=" nav-item"><a href="#"><i class="ft-check-square"></i><span data-i18n="" class="menu-title">Список завдань</span><span class="tag tag-danger tag-pill float-xs-right mr-2">New</span></a>
-                <ul class="menu-content">
-                    <li><a href="#" class="menu-item">Запросити друга +5</a></li>
-                    <li><a href="#" class="menu-item">Додати декларацію +15</a></li>
-                    <li><a href="#" class="menu-item" title="Розшифрувати декларацію +10">Розшифрувати декларацію +10</a></li>
-                    <li><a href="#" class="menu-item">Знайти гарну хату +5</a></li>
-                </ul>
-            </li>
-            <li class=" nav-item"><a href="#"><i class="ft-heart"></i><span data-i18n="" class="menu-title">Список фондів</span><span class="tag tag-warning tag-pill float-xs-right mr-2">+3</span></a>
-                <ul class="menu-content">
-                    <li><a href="#" class="menu-item">Таблеточки</a></li>
-                    <li><a href="#" class="menu-item">Повернись живим</a></li>
-                    <li><a href="#" class="menu-item">Крила</a></li>
-                    <li><a href="#" class="menu-item">Азов</a></li>
-                </ul>
-            </li>
-            <li class="nav-item"><a href="#"><i class="ft-info"></i><span data-i18n="" class="menu-title">Про проект</span></a></li>
-        </ul>
+        <!--(bake _menu-tree-vertical.html)-->
     </div>
 </div>
