--- a/src/html/not-logged-index.html
+++ b/src/html/not-logged-index.html
@@ -107,8 +107,8 @@
                                   <!--(bake _svg-logo.html logo="curved-arrow")-->
                                   <div class="step-text">
                                       <h5 class="bg-amber bg-lighten-1 white">Крок перший</h5>
-                                      <h2 class="t tn amber lighten-1"><i class="fa fa-list-ol" aria-hidden="true"></i> Обери завдання</h2>
-                                      <p>Увійдіть та оберіть одне із завдань на свій смак. Вони не складні.</p>
+                                      <h2 class="t tn amber lighten-1"><i class="fa fa-list-ol" aria-hidden="true"></i> Увійди та обери завдання</h2>
+                                      <p>Після реєстрації/логіну оберіть одне із завдань на свій смак. Вони не складні.</p>
                                   </div>
                                   <img class="step-image" src="app-assets/images/pages/step-1.png" alt="Image description">
                               </div>
