--- a/src/html/fund-page.html
+++ b/src/html/fund-page.html
@@ -3,7 +3,7 @@
 
   <!--(bake parts/head.html title="Сторінка фонду")-->
 
-  <body data-open="click" data-menu="vertical-menu" data-col="2-columns" class="vertical-layout vertical-menu 2-columns fixed-navbar">
+  <body data-open="click" data-menu="vertical-menu" data-col="2-columns" class="vertical-layout vertical-menu 2-columns fixed-navbar logged-in">
 
     <!--(bake parts/navbar-top.html)-->
 
