--- a/src/html/index.html
+++ b/src/html/index.html
@@ -2,7 +2,7 @@
 <html lang="en" data-textdirection="ltr" class="loading">
   <!--(bake parts/head.html title="Як допомогти? Головна сторінка")-->
 
-  <body data-open="click" data-menu="vertical-menu" data-col="2-columns" class="vertical-layout vertical-menu 2-columns fixed-navbar">
+  <body data-open="click" data-menu="vertical-menu" data-col="2-columns" class="vertical-layout vertical-menu 2-columns fixed-navbar logged-in">
 
     <!--(bake parts/navbar-top.html)-->
 
