--- a/src/html/parts/_menu-tree-horizontal.html
+++ b/src/html/parts/_menu-tree-horizontal.html
@@ -8,7 +8,14 @@
     <li data-menu="dropdown" class="dropdown nav-item">
         <a href="#" class="nav-link"><i class="ft-info"></i><span data-i18n="" class="menu-title">Про проект</span></a>
     </li>
-    <li class="nav-item">
+    <li class="nav-item float-xs-right btn-group">
+        <button type="button" class="btn btn-info btn-info-light-blue dropdown-toggle nav-login-button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fa fa-user-o"></i> Увійдіть</button>
+        <div class="dropdown-menu">
+            <a class="dropdown-item" href="#">Увійти за логіном</a>
+            <a class="dropdown-item" href="#">За допомогою Facebook</a>
+        </div>
+    </li>
+    <li class="nav-item float-xs-right">
         <section id="block-sociallinksblock" class="block block-sociallinks-block clearfix">
             <ul class="pl-0">
                 <li><a href="#" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
@@ -17,18 +24,4 @@
             </ul>
         </section>
     </li>
-    <div class="nav-item float-xs-right btn-group">
-        <button type="button" class="btn btn-primary dropdown-toggle nav-login-button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fa fa-user-o"></i> Увійдіть</button>
-        <div class="dropdown-menu">
-            <a class="dropdown-item" href="#">Увійти за логіном</a>
-            <a class="dropdown-item" href="#">За допомогою Facebook</a>
-        </div>
-    </div>
-    <!--<li data-menu="dropdown" class="dropdown nav-item">
-        <a href="#" data-toggle="dropdown" class="dropdown-toggle nav-link"><i class="ft-user"></i><span data-i18n="" class="menu-title">Профіль</span></a>
-        <ul class="dropdown-menu">
-            <li data-menu=""><a href="#" data-toggle="dropdown" class="dropdown-item"><i class="ft-cog"></i> Редагувати профіль</a></li>
-            <li data-menu=""><a href="#" data-toggle="dropdown" class="dropdown-item"><i class="ft-power"></i> Вихід</a></li>
-        </ul>
-    </li>-->
 </ul>
